@@ -18,9 +18,12 @@ import pt.haslab.specassistant.repositories.NodeRepository;
 import pt.haslab.specassistant.util.Ordered;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentMap;
+import java.util.function.BinaryOperator;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @ApplicationScoped
@@ -48,15 +51,27 @@ public class PolicyManager {
 
     public void djisktra(ObjectId graph_id, PolicyOption policyOption) {
         Collection<DjisktraNode> batch = nodeRepo.streamByGraphIdAndValid(graph_id).map(n -> DjisktraNode.builder().node(n).score(policyOption.getIdentity()).build()).toList();
+
+        Function<List<Double>, Double> choosenOne = switch (policyOption.getObjective()) {
+            case MIN -> Collections::min;
+            case MAX -> Collections::max;
+        };
+
+        BinaryOperator<DjisktraNode> best = switch (policyOption.getObjective()) {
+            case MIN -> Ordered::min;
+            case MAX -> Ordered::max;
+        };
+
         while (!batch.isEmpty()) {
-            Double min = batch.stream().map(x -> x.score).min(Double::compare).orElseThrow();
-            Map<Boolean, List<DjisktraNode>> nodes = batch.stream().collect(Collectors.groupingBy(x -> x.score <= min, Collectors.toList()));
+            List<Double> scores = batch.stream().map(x -> x.score).toList();
+            Double target = choosenOne.apply(scores);
+            Map<Boolean, List<DjisktraNode>> nodes = batch.stream().collect(Collectors.groupingBy(x -> x.score <= target, Collectors.toList()));
             ConcurrentMap<ObjectId, DjisktraNode> map = nodes.getOrDefault(false, List.of()).stream().collect(Collectors.toConcurrentMap(x -> x.node.id, x -> x));
             batch = nodes.get(true)
                     .stream().parallel()
                     .peek(DjisktraNode::save)
-                    .flatMap(n -> edgeRepo.streamTransitionsByDestinationScoreGT(n.node, min).parallel().map(t -> n.apply(t, policyOption.getRule())))
-                    .collect(Collectors.toConcurrentMap(x -> x.node.id, x -> x, policyOption.getObjective() == PolicyOption.Objective.MIN ? Ordered::min : Ordered::max, () -> map)).values();
+                    .flatMap(n -> edgeRepo.streamTransitionsByDestinationScoreNull(n.node, target).parallel().map(t -> n.apply(t, policyOption.getRule())))
+                    .collect(Collectors.toConcurrentMap(x -> x.node.id, x -> x, best, () -> map)).values();
         }
     }
 
